Dynegy/src/objects/LDC_Account__c.object
<CustomObject>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <globalPicklist>Service_Territory</globalPicklist>
        <label>Service Territory</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Settlement_Month__c</fullName>
        <description>This picklist field is created for handling the net metering.</description>
        <label>Settlement Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <formula>Account__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_DUNS__c</fullName>
        <formula>Account__r.Supplier__r.Supplier_DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Group__c</fullName>
        <label>Supply Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Voltage__c</fullName>
        <label>Supply Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_Obligation_Quantity__c</fullName>
        <label>Transmission Obligation Quantity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Utility_Name_LDC_Number__c</fullName>
        <label>Unique Utility Name LDC Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utility_Rate_Class__c</fullName>
        <label>Utility Rate Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_SubClass__c</fullName>
        <label>Utility Rate SubClass</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Unique_ID__c</fullName>
        <description>This field is created to store the Utility Unique ID and used in the iAve conversion</description>
        <label>Utility Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Zone__c</fullName>
        <label>Utility Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LDC Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Account_Status__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Service_Street_1__c</columns>
        <columns>Service_Street_2__c</columns>
        <columns>Service_State__c</columns>
        <columns>Service_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>American_Electric_Power</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <label>American Electric Power</label>
    </listViews>
    <listViews>
        <fullName>Duke_Energy_Ohio</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Duke Energy Ohio</value>
        </filters>
        <label>Duke Energy Ohio</label>
    </listViews>
    <nameField>
        <label>LDC Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDC Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>